[identity] Return non-Sync primary account from getProfileUserInfo()

Objective: enable extensions to get profile information about an
unconsented primary account.

Historically, the primary Chrome account has always been an account with
the Sync enabled. Since project DICE, Chrome can also have a primary
account that doesn't have Sync enabled, which is referred to as
unconsented primary account.

This CL adds an optional parameter to getProfileUserInfo() that
controls account of which type should be returned. This parameter will
default to Sync-enable accounts. Thus, we'll preserve existing behavior
for extensions that do not update their code.

IdentityTestEnvironment requires an update because otherwise identity
apitests fail.

For some cookie-related requests, IdentityTestEnvironment gets a
TestURLLoaderFactory via
`dependencies_owner_->signin_client()->GetTestURLLoaderFactory()`.
But IdentityTestEnvironment::dependencies_owner_ is nullptr when the
dependencies owner is created through IdentityTestEnvironmentAdaptor.
The test needs to have a way to inject its own TestURLLoaderFactory
into IdentityTestEnvironment.

Change-Id: Id121e9f2e260fcaf1736ed218d975f87bfda8e94
Fixed: 907425, 1074069
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2164629
Commit-Queue: Alex Ilin <alexilin@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: David Roger <droger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#763965}